--- a/quote/templates/quote/my_quotes.html
+++ b/quote/templates/quote/my_quotes.html
@@ -77,6 +77,26 @@
                     <a href="{% url 'edit_quote' quote.id %}" class="btn btn-sm btn-outline-warning">Edit</a>
                     <a href="{% url 'delete_quote' quote.id %}" class="btn btn-sm btn-outline-danger">Delete</a>
                 </div>
+                {% if request.user.is_authenticated %}
+                    <p><a href="{% url 'add_comment' quote.id %}">➕ Add comment</a></p>
+                {% endif %}
+                {% with iteration=forloop.counter0 %}
+                {% for commentArr in comments %}
+                    {% if forloop.counter0 == iteration %}
+                    {% for comment in commentArr %}
+                        <p>— <strong>{{ comment.user }}</strong> ({{ comment.created_at }})</p>
+                        <blockquote>{{ comment.content }}</blockquote>
+                        {% if request.user == comment.user %}
+                            <div class="mt-3 d-flex gap-2">
+                                <a href="{% url 'delete_comment' comment.id %}" class="btn btn-sm btn-outline-danger">Delete</a>
+                            </div>
+                        {% endif %}
+                    {% empty %}
+                        <p>Be the first to comment!</p>
+                    {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                {% endwith %}
             </div>
         </div>
     {% empty %}
